--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     font-size: 18px;
     line-height: 34px;
     color: #777777;
-    background: url("../images/concrete_seamless.png");
+    background: url(concrete_seamless.png);
   }
   
   * {
@@ -215,4 +215,75 @@ body {
     background: #4aaaa5;
     border: 0 none;
   }
-  
+
+  @media screen and (max-width: 980px) {
+      #main-container {
+          width: 70%;
+          margin-left: 40px;
+          margin-right: 300px;
+          
+      }
+
+      #masthead {
+          margin-left:  40px;
+          width: 100%;
+          padding-right: 100px;
+      }
+
+      .main-section {
+          padding-bottom: 100px;
+          margin-bottom: 400px;
+      }
+  }
+
+  @media screen and (max-width: 768px) {
+      #main-container {
+          width: 95%;
+          margin-left: 20px;
+          margin-right: 0px;
+      }
+
+      #masthead {
+          margin-left: 0px;
+          margin-right: 0px;
+          width: 100%;
+          padding-right: 0px;
+      }
+
+      .main-section {
+          padding-bottom: 20px;
+          margin-top: 50px;
+      }
+    
+  }
+
+  @media screen and (max-width: 640px) {
+    #mainhead #logo {
+        position: static;
+        width: 100%;
+    }  
+
+    #logo {
+        width: 100%;
+    }
+    
+    #main-container {
+          width: 95%;
+          margin-left: 20px;
+          margin-right: 20px;
+      }
+
+
+    .main-section {
+          padding-bottom: 20px;
+      }
+
+    .auth-image {
+          width: 95%;
+      }
+
+    nav {
+          width: 100%;
+          text-align: center;
+      }
+  }
