Added a few comments to style.css

--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+/*Responsive portfolio, media queries are going to be here.
+-I tried to keep css usage down for the media queries, I relaized that you do not have to change much, just the same sections
+of the page over and over again until you obtain the desired sizes.
+*/
+
+
 body {
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     font-size: 18px;
@@ -216,6 +222,8 @@ body {
     border: 0 none;
   }
 
+/* Responsiveness for screens with a width of 980px or less*/
+
   @media screen and (max-width: 980px) {
       #main-container {
           width: 70%;
@@ -235,6 +243,8 @@ body {
           margin-bottom: 400px;
       }
   }
+
+/* Responsiveness for screens with a width of 768px or less*/
 
   @media screen and (max-width: 768px) {
       #main-container {
@@ -256,6 +266,8 @@ body {
       }
     
   }
+
+/* Responsiveness for screens with a width of 640px or less*/
 
   @media screen and (max-width: 640px) {
     #mainhead #logo {
